tests/snapshots/error_tests__io_error_conversion.snap
---
source: tests/error_tests.rs
expression: error_info
---
- - type
  - IoError
- - contains_io
  - "true"
- - contains_not_found
  - "true"
