tests/snapshots/error_tests__json_error_conversion.snap
---
source: tests/error_tests.rs
expression: error_info
---
- - type
  - ParseError
- - contains_parse
  - "true"
