tests/snapshots/error_tests__system_time_error_conversion.snap
---
source: tests/error_tests.rs
expression: error_info
---
- - type
  - SystemTimeError
- - contains_time
  - "true"
