tests/snapshots/error_tests__utf8_error_conversion.snap
---
source: tests/error_tests.rs
expression: error_info
---
- - type
  - Utf8Error
- - contains_utf8
  - "true"
